Still messy. Anyway, I'll clean this notebook soon.

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -5759,21 +5759,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 109,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting TestStringEx2.java\n"
-     ]
-    }
-   ],
    "source": [
+    "```java\n",
+    "\n",
     "%%file TestStringEx2.java\n",
     "\n",
     "public class TestStringEx2 {\n",
@@ -5841,7 +5833,8 @@
     "        Integer c=1;       //test:unboxing\n",
     "        System.out.println(c+1);\n",
     "    }\n",
-    "}"
+    "}\n",
+    "```"
    ]
   },
   {
@@ -6009,6 +6002,182 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 32. exercise: construct a package and know how to import it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's write two simple test packages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ThreeWaysToSayHi.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file ThreeWaysToSayHi.java\n",
+    "\n",
+    "package SaySomething;\n",
+    "class ThreeWaysToSayHi{\n",
+    "    void sayHi01(){System.out.println(\"hi!\");}\n",
+    "    void sayHi02(){System.out.println(\"Moin Moin!\");}\n",
+    "    void sayHi03(){System.out.println(\"Buon giorno!\");}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing TWoWaysToInsult.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TWoWaysToInsult.java\n",
+    "\n",
+    "package SaySomethingBad;\n",
+    "public class TWoWaysToInsult{\n",
+    "    public void insult01(){System.out.println(\"You bastard!\");}\n",
+    "    public void insult02(){System.out.println(\"Never will I ever see you again!\");}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing SayXXXTest.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file SayXXXTest.java\n",
+    "\n",
+    "package SaySomething;\n",
+    "import SaySomethingBad.*; // meaning that we import every classes of that package.\n",
+    "\n",
+    "public class SayXXXTest{\n",
+    "    public static void main(String args[]){\n",
+    "        SaySomething.ThreeWaysToSayHi Italian=new SaySomething.ThreeWaysToSayHi();\n",
+    "        Italian.sayHi03();\n",
+    "\n",
+    "        SaySomethingBad.TWoWaysToInsult English=new SaySomethingBad.TWoWaysToInsult();\n",
+    "        English.insult02();\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!\\rm -r SaySomething\n",
+    "!\\rm -r SaySomethingBad\n",
+    "!mkdir SaySomething\n",
+    "!mkdir SaySomethingBad\n",
+    "!mv ThreeWaysToSayHi.java SaySomething\n",
+    "!mv SayXXXTest.java SaySomething\n",
+    "!mv TWoWaysToInsult.java SaySomethingBad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!javac SaySomething/ThreeWaysToSayHi.java"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!javac SaySomethingBad/TWoWaysToInsult.java"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!javac SaySomething/SayXXXTest.java"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buon giorno!\r\n",
+      "Never will I ever see you again!\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!java SaySomething.SayXXXTest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keep in mind that, classes that are used are required to be imported if they are not within the package that covers the main method. Also, those classes and their methods are required to be declared as public if one would like them to be observed by the methods (including the main method) of other packages."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Day 10 ; 5.10.2016; Taipeh"
@@ -6023,7 +6192,7 @@
     "(Here's a tutorial about the polymorphism:\n",
     "http://beginnersbook.com/2013/04/runtime-compile-time-polymorphism/)\n",
     "\n",
-    "Basically, polymorphism means that a method can have different forms. This happens when, say, method overriding and method overloading. Below is a case of method overriding:"
+    "Basically, poly(many)morphism(forms) means that a method can have different forms. This happens when, say, method overriding and method overloading. Below is a case of method overriding:"
    ]
   },
   {
@@ -6106,25 +6275,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the example above, we've used all the possible ways to call the sayHi method. Apparently, the sayHi method has different forms.(it says hello or hi) Thus, this is polymorphism (run-time polymorphism). It is not a compile-time polymorphism, since the compiler cannot tell which methods of which classes it should use (in the above example, references of the object a and c are the same). Only while excuting(run-time), the Java Virtial Machine will decide which function to call, which is based on how the object is created (not based on the reference type of the object).\n",
+    "In the example above, we've used all the possible ways to call the sayHi method. Apparently, the sayHi method has different forms.(it says hello or hi) Thus, this is polymorphism (run-time polymorphism). It is not a compile-time polymorphism, since the compiler cannot tell which methods of which classes it should use (in the above example, the reference type of the object a and c are the same). Only while excuting(run-time), the Java Virtial Machine will decide which function to call, which is based on how the object is created (not based on the reference type of the object).\n",
     "\n",
-    "On the other hand, in the case of method overloading, the compiler can tell which method it has to call, since, although the method names are the same, the input arguments are diferent. Apparently, with overloading, a method can have different forms. Hence, this is again the concept of polymorphism (compile-time).\n"
+    "On the other hand, in the case of method overloading, the compiler can tell which method it has to call, since, although the method names are the same, the input arguments are different. Apparently, with overloading, a method can have different forms. Hence, this is again the concept of polymorphism (compile-time).\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### e.g. 20: "
+    "### e.g.20: an example for up-casting and down casting"
    ]
   },
   {
@@ -6146,58 +6306,57 @@
     "%%file CallTestPolymorphismEx1.java\n",
     "\n",
     "class Mammal {\n",
-    "\tpublic static void play(Mammal m){ //Mammal m = kitty; -> Mammal m = new Cat();\n",
-    "\t\tm.happy();                     //Mammak m = snoopy; -> Mammal m = new Dog();\n",
-    "\t   \n",
-    "\t\tif(m instanceof Cat){\n",
-    "\t    \tCat c1 = (Cat)m;\n",
-    "\t    \tc1.jumpAway();\n",
-    "\t    }\n",
-    "\t    \n",
-    "\t    if(m instanceof Dog){\n",
-    "\t    \tDog d1 = (Dog)m;\n",
-    "\t    \td1.biteBall();\n",
-    "\t    }\n",
-    "\t}\n",
-    "\t\n",
-    "\tpublic void happy(){\n",
-    "\t\tSystem.out.println(\"happy\");\n",
-    "\t}\n",
+    "    public static void play(Mammal m){\n",
+    "        m.happy();\n",
+    "\n",
+    "        if(m instanceof Cat){\n",
+    "            Cat c1 = (Cat)m;\n",
+    "            c1.jumpAway();\n",
+    "        }\n",
+    "   \n",
+    "        if(m instanceof Dog){\n",
+    "            Dog d1 = (Dog)m;\n",
+    "            d1.biteBall();\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void happy(){\n",
+    "        System.out.println(\"happy\");\n",
+    "    }\n",
     "}\n",
     "\n",
     "class Cat extends Mammal{\n",
-    "\tpublic void happy(){\n",
-    "\t\tSystem.out.println(\"Meow Meow happy\");\n",
-    "\t}\n",
-    "\t\n",
-    "\tpublic void jumpAway(){\n",
-    "\t\tSystem.out.println(\"Cat Jumps Away.\");\n",
-    "\t}\n",
+    "    public void happy(){\n",
+    "        System.out.println(\"Meow Meow happy\");\n",
+    "    }\n",
+    "\n",
+    "    public void jumpAway(){\n",
+    "        System.out.println(\"Cat Jumps Away.\");\n",
+    "    }\n",
     "}\n",
     "\n",
     "class Dog extends Mammal{\n",
     "\n",
-    "\t@Override\n",
-    "\tpublic void happy() {\n",
+    "    @Override\n",
+    "    public void happy() {\n",
     "        System.out.println(\"Moin Moin happy\");\n",
-    "\t}\n",
-    "\t\n",
-    "\tpublic void biteBall() {\n",
-    "\t\tSystem.out.println(\"Dog Bites Ball.\");\n",
-    "\t}\n",
-    "\t\n",
+    "    }\n",
+    "\n",
+    "    public void biteBall() {\n",
+    "        System.out.println(\"Dog Bites Ball.\");\n",
+    "    }\n",
+    "\n",
     "}\n",
     "\n",
     "public class CallTestPolymorphismEx1 {\n",
     "\n",
-    "\tpublic static void main(String[] args) {\n",
-    "\t\tCat kitty = new Cat();\n",
-    "\t\tMammal.play(kitty);\n",
-    "\t\t\n",
-    "\t\tDog snoopy = new Dog();\n",
-    "\t\tMammal.play(snoopy);\n",
-    "\t}\n",
+    "    public static void main(String[] args) {\n",
+    "        Cat kitty = new Cat();\n",
+    "        Mammal.play(kitty);\n",
     "\n",
+    "        Dog snoopy = new Dog();\n",
+    "        Mammal.play(snoopy);\n",
+    "    }\n",
     "}\n"
    ]
   },
@@ -6222,6 +6381,13 @@
    "source": [
     "!javac CallTestPolymorphismEx1.java\n",
     "!java CallTestPolymorphismEx1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 32. exercise: down casting (\"without\" method overriding)"
    ]
   },
   {
@@ -6265,11 +6431,10 @@
     "        parent b=new child();\n",
     "        b.sayHi();\n",
     "        b.sayGoodBye();\n",
-    "        //b.sayHello();\n",
+    "        //b.sayHello(); //it is unable to say hello because it's reference type is not the type of the child class.\n",
     "        \n",
     "        child c=(child)b;\n",
-    "        c.sayHello();\n",
-    "        \n",
+    "        c.sayHello();  // after down-casting, it can say hello, since its type becomes the type of the child class.\n",
     "    }\n",
     "}"
    ]
@@ -6297,8 +6462,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 33. exercise: down casting (\"with\" method overriding)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false
    },
@@ -6326,7 +6498,8 @@
     "class child extends parent{\n",
     "        //@Override\n",
     "        void sayHi(){\n",
-    "        System.out.println(\"I'm not going to say hi. I'll say hello.\");\n",
+    "        super.sayHi();\n",
+    "        System.out.println(\" How are you?\");\n",
     "        }\n",
     "        void sayYo(){\n",
     "        System.out.println(\"I'm not going to say hi. I'll say Yo.\");\n",
@@ -6340,8 +6513,8 @@
     "        parent b=new child();\n",
     "        b.sayHi();\n",
     "        b.sayGoodBye();\n",
-    "        //b.sayHello();\n",
-    "        \n",
+    "        //b.sayHello(); //Error! This is not possible.\n",
+    "\n",
     "        child c=(child)b;\n",
     "        c.sayHi();\n",
     "        c.sayYo();\n",
@@ -6352,7 +6525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false
    },
@@ -6361,16 +6534,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm not going to say hi. I'll say hello.\n",
-      "GoodBye\n",
-      "I'm not going to say hi. I'll say hello.\n",
-      "I'm not going to say hi. I'll say Yo.\n"
+      "Hi\r\n",
+      " How are you?\r\n",
+      "GoodBye\r\n",
+      "Hi\r\n",
+      " How are you?\r\n",
+      "I'm not going to say hi. I'll say Yo.\r\n"
      ]
     }
    ],
    "source": [
     "!javac TestExtends.java\n",
     "!java TestExtends"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### e.g.21: exercise: an auto telling machine. (practice: extending the original class)"
    ]
   },
   {
@@ -6469,7 +6651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 165,
    "metadata": {
     "collapsed": false
    },
@@ -6485,25 +6667,29 @@
    "source": [
     "%%file TestEquals.java\n",
     "\n",
-    "public class TestEquals extends parent {\n",
+    "public class TestEquals{\n",
     "\n",
     "    public static void main(String[] args) {\n",
+    "\n",
     "        String food0=\"spaghetti\";\n",
-    "        String food1=new String(\"spaghetti\");\n",
+    "        String food1=\"spaghetti\";\n",
     "        String food2=new String(\"spaghetti\");\n",
+    "        String food3=new String(\"spaghetti\");\n",
+    "        System.out.println(food0==food1);\n",
     "        System.out.println(food1==food2);\n",
+    "        System.out.println(food2==food3);\n",
     "        System.out.println(food1.equals(food2));\n",
-    "        System.out.println(food0.equals(food0));\n",
+    "        System.out.println(food2.equals(food3));\n",
     "        \n",
     "        System.out.println();\n",
-    "        \n",
+    "        System.out.println(food1+\" \"+food2);\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 166,
    "metadata": {
     "collapsed": false
    },
@@ -6512,15 +6698,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "false\n",
-      "true\n",
-      "true\n"
+      "true\r\n",
+      "false\r\n",
+      "false\r\n",
+      "true\r\n",
+      "true\r\n",
+      "\r\n",
+      "spaghetti spaghetti\r\n"
      ]
     }
    ],
    "source": [
     "!javac TestEquals.java\n",
     "!java TestEquals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remark: \n",
+    "\n",
+    "* String variables in Java are objects (that's why their reference type is \"String\" with capital \"S\"). In the above example, \"food0\" and \"food1\" have the same instance and the same content. Hence, \"food0==food1\". However, if the string object is created by \"new\" (\"food2\" for example), then, \"food1\" and \"food2\" usually won't share the same instance. In this case, although their contents are the same, \"food1/= food2\".\n",
+    "\n",
+    "* To see whether the content of two strings are the same, use the method \"equals\"."
    ]
   },
   {
@@ -7869,9 +8070,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Java 9",
-   "language": "java",
-   "name": "java"
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
