Minor fix. Still messy at the last part.

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -6465,12 +6465,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 33. exercise: down casting (\"with\" method overriding)"
+    "### 33. exercise: down casting (\"with\" method overriding)\n",
+    "\n",
+    "Notice that, in the below exercise, I have used super.xxx in order to call a method of the parent class from the child class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -6488,7 +6490,7 @@
     "\n",
     "class parent{\n",
     "    void sayHi(){\n",
-    "        System.out.println(\"Hi\");\n",
+    "        System.out.println(\"Hi (from the parent class)\");\n",
     "    }\n",
     "    void sayGoodBye(){\n",
     "        System.out.println(\"GoodBye\");\n",
@@ -6498,11 +6500,11 @@
     "class child extends parent{\n",
     "        //@Override\n",
     "        void sayHi(){\n",
-    "        super.sayHi();\n",
-    "        System.out.println(\" How are you?\");\n",
+    "        super.sayHi();   // using \"super.xxx\" to call the sayHi method of the father class.\n",
+    "        System.out.println(\"Hi (from the child class)\");\n",
     "        }\n",
     "        void sayYo(){\n",
-    "        System.out.println(\"I'm not going to say hi. I'll say Yo.\");\n",
+    "        System.out.println(\"Yo (from the child class)\");\n",
     "        }\n",
     "}\n",
     "\n",
@@ -6525,7 +6527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -6534,12 +6536,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi\r\n",
-      " How are you?\r\n",
+      "Hi (from the parent class)\r\n",
+      "Hi (from the child class)\r\n",
       "GoodBye\r\n",
-      "Hi\r\n",
-      " How are you?\r\n",
-      "I'm not going to say hi. I'll say Yo.\r\n"
+      "Hi (from the parent class)\r\n",
+      "Hi (from the child class)\r\n",
+      "Yo (from the child class)\r\n"
      ]
     }
    ],
@@ -6650,8 +6652,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### e.g.22: learn how to see if two strings are equal. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -6680,16 +6689,13 @@
     "        System.out.println(food2==food3);\n",
     "        System.out.println(food1.equals(food2));\n",
     "        System.out.println(food2.equals(food3));\n",
-    "        \n",
-    "        System.out.println();\n",
-    "        System.out.println(food1+\" \"+food2);\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -6702,9 +6708,7 @@
       "false\r\n",
       "false\r\n",
       "true\r\n",
-      "true\r\n",
-      "\r\n",
-      "spaghetti spaghetti\r\n"
+      "true\r\n"
      ]
     }
    ],
@@ -6719,138 +6723,14 @@
    "source": [
     "Remark: \n",
     "\n",
-    "* String variables in Java are objects (that's why their reference type is \"String\" with capital \"S\"). In the above example, \"food0\" and \"food1\" have the same instance and the same content. Hence, \"food0==food1\". However, if the string object is created by \"new\" (\"food2\" for example), then, \"food1\" and \"food2\" usually won't share the same instance. In this case, although their contents are the same, \"food1/= food2\".\n",
+    "* String variables in Java are objects (that's why their reference type is \"String\" with capital \"S\"). In the above example, \"food0\" and \"food1\" have the same instance and the same content. Hence, \"food0==food1\". However, if the string object is created by \"new\" (\"food2\" for example), then, \"food1\" and \"food2\" usually won't share the same instance. In this case, although their contents are the same, we have food1 != food2.\n",
     "\n",
     "* To see whether the content of two strings are the same, use the method \"equals\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting CallTestPolymorphismEx1.java\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file CallTestPolymorphismEx1.java\n",
-    "\n",
-    "class Mammal{\n",
-    "    public static void play(Mammal m){\n",
-    "\t\tm.happy();\n",
-    "\t}\n",
-    "\t\n",
-    "\tpublic void happy(){\n",
-    "\t\tSystem.out.println(\"happy\");\n",
-    "\t}\n",
-    "}\n",
-    "\n",
-    "class Cat extends Mammal{\n",
-    "\tpublic void happy(){\n",
-    "\t\tSystem.out.println(\"Meow happy\");\n",
-    "\t}\n",
-    "}\n",
-    "\n",
-    "public class CallTestPolymorphism {\n",
-    "\n",
-    "\tpublic static void main(String[] args) {\n",
-    "\t\tCat kitty = new Cat();\n",
-    "\t\tlittlekitty=(Mammal)kitty;\n",
-    "        littlekitty.happy;\n",
-    "\t}\n",
-    "\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting CallTestPolymorphism.java\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%file CallTestPolymorphism.java\n",
-    "\n",
-    "class Mammal{\n",
-    "    private int g=5;\n",
-    "\tpublic void happy(int i){\n",
-    "\t\tSystem.out.println(\"happy\");\n",
-    "\t}\n",
-    "}\n",
-    "\n",
-    "class Cat extends Mammal{\n",
-    "\tpublic void happy(){\n",
-    "\t\tSystem.out.println(\"Meow happy\");\n",
-    "\t}\n",
-    "}\n",
-    "\n",
-    "public class CallTestPolymorphism {\n",
-    "\n",
-    "\tpublic static void main(String[] args) {\n",
-    "        Mammal kitty= new Cat();\n",
-    "        //kitty.happy(1);\n",
-    "        kitty.happy();\n",
-    "        if(kitty instanceof Cat){System.out.println(\"I'm a instance of cat\");}\n",
-    "        else{System.out.println(\"I'm a instance of Mammal\");}\n",
-    "\t\t//Mammal littlekitty=(Mammal)kitty;\n",
-    "        //littlekitty.happy();\n",
-    "    }\n",
-    "\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "CallTestPolymorphism.java:20: error: method happy in class Mammal cannot be applied to given types;\n",
-      "        kitty.happy();\n",
-      "             ^\n",
-      "  required: int\n",
-      "  found: no arguments\n",
-      "  reason: actual and formal argument lists differ in length\n",
-      "1 error\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I'm a instance of cat\n"
-     ]
-    }
-   ],
-   "source": [
-    "!javac CallTestPolymorphism.java\n",
-    "!java CallTestPolymorphism"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -6867,7 +6747,7 @@
     "%%file CallTestSingletonEx1.java\n",
     "\n",
     "class TestSingletonEx1 {\n",
-    "\tprivate String name = \"john\";\n",
+    "\tprivate String name = \"John\";\n",
     "\tprivate static TestSingletonEx1 ref2 = null;\n",
     "\tprivate static final TestSingletonEx1 ref3 = new TestSingletonEx1();\n",
     "\n",
@@ -6878,6 +6758,7 @@
     "\t\tSystem.out.println(\"You've got a mail:\" + name);\n",
     "\t}\n",
     "\n",
+    "\t//...\n",
     "\tpublic static TestSingletonEx1 getRef1() {\n",
     "\t\tTestSingletonEx1 ref1 = new TestSingletonEx1();\n",
     "\t\treturn ref1;\n",
@@ -6898,28 +6779,26 @@
     "public class CallTestSingletonEx1 {\n",
     "\n",
     "\tpublic static void main(String[] args) {\n",
-    "\t\t// TestSingletonEx1 singleton = new TestSingletonEx1();\n",
-    "\t\t\n",
-    "        //TestSingletonEx1 obj1 = TestSingletonEx1.getRef1();\n",
-    "\t\t//obj1.showMessage();\n",
+    "\t\tTestSingletonEx1 singleton = new TestSingletonEx1(); \n",
+    "        /* the above line is wrong! since the constructor is private, \n",
+    "        /* it's not possible to instantiate the Singleton class. Instead, one get an instance through a \n",
+    "        /* static method of singleton.                    */\n",
+    "        \n",
+    "\t\tTestSingletonEx1 obj1 = TestSingletonEx1.getRef1();\n",
+    "\t\tobj1.showMessage();\n",
     "\t\t\n",
     "\t\tTestSingletonEx1 obj2 = TestSingletonEx1.getRef2();\n",
     "\t\tobj2.showMessage();\n",
-    "        \n",
-    "\t\tTestSingletonEx1 obj3 = TestSingletonEx1.getRef2();\n",
-    "\t\tobj3.showMessage();\n",
-    "        \n",
     "\t\t\n",
-    "\t\t//TestSingletonEx1 obj3 = TestSingletonEx1.getRef3();\n",
-    "\t\t//obj3.showMessage();\n",
+    "\t\tTestSingletonEx1 obj3 = TestSingletonEx1.getRef3();\n",
+    "\t\tobj3.showMessage();\n",
     "\t}\n",
-    "\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -6928,8 +6807,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You've got a mail:john\n",
-      "You've got a mail:john\n"
+      "CallTestSingletonEx1.java:35: error: TestSingletonEx1() has private access in TestSingletonEx1\n",
+      "\t\tTestSingletonEx1 singleton = new TestSingletonEx1();\n",
+      "\t\t                             ^\n",
+      "1 error\n",
+      "You've got a mail:John\n",
+      "You've got a mail:John\n",
+      "You've got a mail:John\n"
      ]
     }
    ],
@@ -7043,10 +6927,11 @@
     "            for(int i=0;i<=3;i++){\n",
     "                System.out.println(a[i]);\n",
     "            }\n",
-    "        }catch(ArithmeticException err){\n",
+    "            }\n",
+    "        catch(ArithmeticException err){\n",
     "                System.out.println(\"error1!\");\n",
-    "\n",
-    "        }catch(Exception err){\n",
+    "                }\n",
+    "            catch(Exception err){\n",
     "                System.out.println(\"error2!\");\n",
     "                System.out.println(err);\n",
     "                String aa=err.getMessage();\n",
@@ -8913,7 +8798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -8973,38 +8858,25 @@
     "\t\ttrack.storeSignatureTrack();\n",
     "        \n",
     "        \n",
-    "        ListIterator<LinkedList<HashMap<String, Double>>> iterator =track.mutileLines.listIterator();\n",
-    "        while(iterator.hasNext()){\n",
-    "            \n",
-    "            Set<HashMap<String, Double>> itera=iterator.next();\n",
-    "                 entrySet()\n",
-    "\n",
+    "        ListIterator<LinkedList<HashMap<String, Double>>> multilineIterator =track.mutileLines.listIterator();\n",
+    "        while(multilineIterator.hasNext()){\n",
+    "            LinkedList<HashMap<String, Double>> line=multilineIterator.next();\n",
+    "            ListIterator<HashMap<String, Double>> lineIterator=line.listIterator();\n",
+    "            //while(lineIterator.hasNext()){            \n",
+    "              //  HashMap<String, Double> points=lineIterator.next();\n",
+    "            //}\n",
     "        }\n",
-    "\n",
-    "        \n",
     "\t}\n",
-    "\n",
     "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TestSignatureTrackEx1.java:50: error: bad initializer for for-loop\n",
-      "            for(ele<String, Double>:itera){\n",
-      "                ^\n",
-      "1 error\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!javac TestSignatureTrackEx1.java\n",
     "!java TestSignatureTrackEx1"
@@ -9206,9 +9078,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
